updated branch name

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ deploy:
   bucket_name: elasticbeanstalk-us-east-2-806368818589
   bucket_path: springboot-gta-alpha
   on: 
-    branch: main
+    branch: master
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
